# pe-hackathon-2026-einav

./: .coverage  .gitignore  00_hackathon_overview.md  02_next_steps.md  03_status_audit.md  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  load_test.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  error_log.py
app/models/: __init__.py  flash_sale.py
app/routes/: __init__.py  reservations.py  telemetry.py
docs/: 00_hackathon_overview.md  01_template_repo_overview.md  demo_script.md  failure_manual.md  implementation_plan.md  quest_requirements.md
frontend/: Dockerfile  package-lock.json
frontend/src/: App.jsx  index.css
tests/: test_api.py
